# user_management_backend_rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20250101000000_create_users_table.sql
src/: config.rs  lib.rs  main.rs
src/api/: docs.rs  error.rs  mod.rs  routes.rs
src/api/dto/: auth.rs  user.rs
src/api/handlers/: auth.rs  users.rs
src/api/middleware/: auth.rs
src/app/services/: auth_service.rs  user_service.rs
src/domain/: errors.rs  mod.rs  role.rs  user.rs
src/infra/: mod.rs
src/infra/auth/: jwt.rs
src/infra/db/: mod.rs  models.rs  user_repo.rs
src/infra/security/: password.rs
src/utils/: mod.rs
tests/: auth_flow.rs
